--- a/just-fun/he/package.json
+++ b/just-fun/he/package.json
@@ -42,6 +42,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "jquery": "^3.3.1",
+    "lowdb": "^1.0.0",
     "normalize.css": "^7.0.0"
   }
 }
