--- a/just-fun/koa/package.json
+++ b/just-fun/koa/package.json
@@ -39,16 +39,17 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
     "jquery": "^3.3.1",
     "koa": "^2.11.0",
-    "koa-body": "^4.1.1",
-    "koa-handlebars": "^1.0.0",
     "koa-hbs": "^0.9.0",
+    "koa-json": "^2.0.2",
     "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0",
     "lowdb": "^1.0.0",
     "multer": "^1.4.2",
     "normalize.css": "^7.0.0"
