--- a/just-fun/koa/package.json
+++ b/just-fun/koa/package.json
@@ -49,8 +49,11 @@
     "jquery": "^3.3.1",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
+    "koa-connect-flash": "^0.1.2",
     "koa-hbs": "^0.9.0",
     "koa-json": "^2.0.2",
+    "koa-multer": "^1.0.2",
+    "koa-pug": "^4.0.3",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.3",
     "koa-static": "^5.0.0",
